requirements.txt plus some minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
 debug*
 checkpoints/
 models/flownet2*
+flownet2-pytorch/
 results/
 build/
+
+*.pyc
+__pycache__
+venv
+*.so*
+*.dylib*
 */Thumbs.db
-*/**/__pycache__
-*/*.pyc
-*/**/*.pyc
-*/**/**/*.pyc
-*/**/**/**/*.pyc
-*/**/**/**/**/*.pyc
-*/*.so*
-*/**/*.so*
-*/**/*.dylib*
 *.DS_Store
+*.sw*
 *~
